added Class Structure similar to Summary

--- a/internalfluxtracking.ipynb
+++ b/internalfluxtracking.ipynb
@@ -292,13 +292,7 @@
     }
    ],
    "source": [
-    "model = modelDict['iJN1462_OCT_UR3_4']\n",
-    "type(model.boundary)\n",
-    "type(model.exchanges)\n",
-    "\n",
-    "#cobra.core.dictlist.DictList(set(model.reactions) - set(model.boundary))\n",
-    "for rxn in model.reactions[:2]:\n",
-    "    print(rxn.metabolites)"
+    "model = modelDict['iJN1462_OCT_UR3_4']\n"
    ]
   },
   {
@@ -316,28 +310,8 @@
     }
    ],
    "source": [
-    "\n",
-    "a = model.summary()\n",
-    "solution = model.optimize()\n",
-    "\n",
-    "a._boundary: List[\"Reaction\"] = [\n",
-    "    #### reaction ### hier veränder damit das Programm die Summary für die internen Flüße macht\n",
-    "    rxn.copy() for rxn in sorted(model.boundary, key=attrgetter(\"id\"))\n",
-    "    #rxn.copy() for rxn in sorted(model.reactions, key=attrgetter(\"id\"))\n",
-    "]\n",
-    "a._boundary_metabolites: List[\"Metabolite\"] = [\n",
-    "    met.copy() for rxn in self._boundary for met in rxn.metabolites\n",
-    "\n",
-    "flux = pd.DataFrame(\n",
-    "    data=[\n",
-    "        (rxn.id, met.id, rxn.get_coefficient(met.id), solution[rxn.id])\n",
-    "        for rxn, met in zip(a._boundary, a._boundary_metabolites)\n",
-    "    ],\n",
-    "    columns=[\"reaction\", \"metabolite\", \"factor\", \"flux\"],\n",
-    "    index=[r.id for r in a._boundary],\n",
-    ")\n",
-    "\n",
-    "flux.head()\n"
+    "model = modelDict['iJN1462_OCT_UR3_4']\n",
+    "model.internal()"
    ]
   }
  ],
