--- a/main.ipynb
+++ b/main.ipynb
@@ -13,7 +13,7 @@
     "import cobra\n",
     "import optlang\n",
     "import copy \n",
-    "import random"
+    "import random\n"
    ]
   },
   {
@@ -62,7 +62,7 @@
     "                'pfba'               :  cobra.flux_analysis.pfba(modelDict['iJN1462_OCT_UR3_4']),\n",
     "                #'geom_fba'           :  cobra.flux_analysis.geometric_fba(modelDict['iJN1462_OCT_UR3_4']),\n",
     "                #'looples_cla'        :  cobra.flux_analysis.loopless.add_loopless(modelDict['iJN1462_OCT_UR3_4']).optimize(),\n",
-    "                #'CylceFreeFlux_algo' :  cobra.flux_analysis.loopless.loopless_solution(modelDict['iJN1462_OCT_UR3_4']),\n",
+    "                'CylceFreeFlux_algo' :  cobra.flux_analysis.loopless.loopless_solution(modelDict['iJN1462_OCT_UR3_4']),\n",
     "                }\n",
     "\n",
     "single_Model_comp = ext.ModelComparison(modelDict=modelDict)\n",
@@ -108,35 +108,6 @@
     "                }\n",
     "\n",
     "single_Model_comp = ext.ModelComparison(modelDict=modelDict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "secretion_react = single_Model_comp.singleModellSummary(solutionDict , nrRea=35)['Secretion']['reaction']\n",
-    "single_Model_comp.singleModellSummary(solutionDict , nrRea=35)['Uptake']['reaction']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = copy.deepcopy(modelDict['iJN1462_OCT_UR3_4'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for reac in secretion_react:\n",
-    "    model.reactions.get_by_id(model).lower_bound = 10"
    ]
   }
  ],
