reation deletion works fine

--- a/linearAlgebraAnalysis.ipynb
+++ b/linearAlgebraAnalysis.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysis of the matrix, to see if information can be extracted\n",
-    "(glucose & octanoate))"
+    "## Analysis of the matrix extract usefull information\n",
+    "\n",
+    "(glucose & octanoate)"
    ]
   },
   {
@@ -17,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,35 +31,23 @@
     "import cobra\n",
     "import optlang\n",
     "import copy \n",
-    "import random"
+    "import random\n",
+    "import scipy as sp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scaling...\n",
-      " A: min|aij| =  1.000e+00  max|aij| =  1.000e+00  ratio =  1.000e+00\n",
-      "Problem data seem to be well scaled\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%capture\n",
     "#Load Models if not already in RAM\n",
     "\n",
-    "#nameList = ['iJN1462_GLC_UR10_9.xml' , 'iJN1462_GLC_UR6_3.xml', 'iJN1462_GLN_UR5_1.xml', 'iJN1462_GLC_UR7_3.xml' , 'iJN1462_OCT_UR3_4.xml']\n",
-    "#nameList = ['iJN1462_GLC_UR6_3.xml' , 'iJN1462_OCT_UR3_4.xml']\n",
     "nameList = ['iJN1462_OCT_UR3_4.xml','iJN1462_GLC_UR6_3.xml']\n",
     "\n",
     "if 'modelDict' not in locals():\n",
     "    modelDict = ext.ImportFunction(nameList)\n",
-    "\n",
     "\n",
     "if 'glc_oct_comp'  not in locals():\n",
     "    glc_oct_comp = ext.ModelComparison(modelDict=modelDict)\n"
@@ -68,34 +57,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Matrix extraction\n",
-    "extracting stoch matrix N and dividing it to N_int and N_ext "
+    "## Model preparation\n",
+    "-   loading Model, \n",
+    "-   reseting upper lower bounds to max/min 1000\n",
+    "-   display all constrained Reactions --> warum atpm ?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_oct       = copy.deepcopy(modelDict['iJN1462_OCT_UR3_4'])\n",
-    "model_glu       = copy.deepcopy(modelDict['iJN1462_GLC_UR6_3'])\n"
+    "#model_glu       = copy.deepcopy(modelDict['iJN1462_GLC_UR6_3']\n",
+    "\n",
+    "model       = copy.deepcopy(modelDict['iJN1462_OCT_UR3_4'])\n",
+    "\n",
+    "\n",
+    "env_conditions = {r.id:(r.lower_bound, r.upper_bound)\n",
+    " for r in model.reactions\n",
+    " if (r.lower_bound not in [-1000, 0]) or (r.upper_bound not in [0, 1000])}\n",
+    "env_conditions\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Matrix preparation\n",
+    "-   loading Model, \n",
+    "-   reseting upper lower bounds to max/min 1000\n",
+    "-   display all constrained Reactions --> warum atpm ?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_glc = cobra.util.create_stoichiometric_matrix(model_glu,'dense')\n",
-    "N_oct = cobra.util.create_stoichiometric_matrix(model_oct,'dense')\n",
+    "#Nu  = cobra.util.create_stoichiometric_matrix(model.remove_reactions(reactions=['EX_octa_e','EX_o2_e','EX_nh4_e']))\n",
+    "Nu_model = model.copy()\n",
+    "model.remove_reactions(reactions=['EX_o2_e','EX_nh4_e','EX_octa_e'])\n",
     "\n",
-    "L_glc = np.sum(N_glc,axis=0)==1\n",
-    "L_oct = np.sum(N_oct,axis=0)==1\n",
     "\n",
-    "N_u_glc = np.delete(N_glc, L_glc,axis=1)\n",
-    "N_u_oct = np.delete(N_oct, L_oct,axis=1)\n"
+    "N   = cobra.util.create_stoichiometric_matrix(model,'dense')\n",
+    "\n",
+    "L   = np.sum(N,axis=0)==1\n",
+    "N_s = np.delete(N, L,axis=1)"
    ]
   },
   {
@@ -107,25 +116,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "311\n",
-      "294\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "[nn,pp]     = N_u_glc.shape\n",
-    "dim_Null    = pp-np.linalg.matrix_rank(N_u_glc)\n",
-    "dim_lNull   = nn-np.linalg.matrix_rank(N_u_glc)\n",
+    "[nn,pp]     = N.shape\n",
+    "dim_Null    = pp-np.linalg.matrix_rank(N)\n",
+    "dim_lNull   = nn-np.linalg.matrix_rank(N)\n",
     "\n",
     "print(dim_Null)\n",
-    "print(dim_lNull)"
+    "print(dim_lNull)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Kr = sp.linalg.null_space(N_u_glc)\n",
+    "Kl = sp.linalg.null_space(N_u_oct.T)\n"
    ]
   },
   {
